# WaveletBuffer

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  cpplint.yml  test-linux.yml
benchmarks/: CMakeLists.txt  denoise_algorithms_benchmark.cc  init.cc  init.h  wavelet_buffer_benchmarks.cc  wavelet_buffer_util_benchmarks.cc
benchmarks/img/: jpeg_codec_benchmarks.cc
benckmarks/: denoise_algorithms_benchmark.cc  wavelet_buffer_benchmarks.cc  wavelet_buffer_util_benchmarks.cc
cmake/: wavelet_buffer-config.cmake.in
conan/: .bashrc  conanfile.py  linux_armv8
conan/test_package/: CMakeLists.txt  conanfile.py
conan/test_package/src/: example.cpp
docs/: README.rst  dependencies.md  licenses.md  requirements.txt
docs/api/: wavelet_buffer.md
docs/py_api/: denoise.md  wavelet_buffer.md  wavelet_parameters.md
docs/py_api/img/: codecs.md  wavelet_image.md
docs/tutorials/: wavelet_buffer_in_a_nutshell.md
examples/: CMakeLists.txt  image_example.cc  input_signal.csv  wavelet_buffer_example.cc  wavelet_buffer_parse_example.cc
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py
python/benchmarks/: test_wavelet_buffer.py
python/examples/: wavelet_buffer.py  wavelet_buffer_example.py  wavelet_image_example.py
python/requirements/: format.txt  test.txt
python/src/: CMakeLists.txt  blaze.cc  blaze_utils.cc  blaze_utils.h  codecs.cc  common.cc  common.h  denoise.cc  denoise.h  enums.cc  init.cc  main.cc  wavelet_buffer.cc  wavelet_buffer.h  wavelet_buffer_view.cc  wavelet_buffer_view.h  wavelet_buffer_view_proxy.h  wavelet_image.cc  wavelet_parameters.cc  wavelet_parameters.h
python/src/img/: codecs.cc  codecs.h  wavelet_image.cc  wavelet_image.h
python/src/wavelet_buffer/: __init__.py  denoise.py  utils.py  wavelet_buffer.py  wavelet_buffer_view.py
python/src/wavelet_buffer/img/: __init__.py  codecs.py  wavelet_image.py
python/src/wb/: __init__.py
python/tests/: test_basic.py  test_codecs.py  test_denoisers.py  test_wavelet_buffer.py  test_wavelet_image.py
sources/: metric.cc  metric.h  padding.cc  wavelet.cc  wavelet_buffer.cc  wavelet_buffer_serialization.cc  wavelet_buffer_serializer.cc  wavelet_buffer_view.cc  wavelet_image.cc  wavelet_utils.cc
sources/codecs/: color_space.cc  jpeg_codecs.cc
sources/img/: color_space.cc  jpeg_codecs.cc  wavelet_image.cc
sources/internal/: matrix_compressor.cc  matrix_compressor.h  sf_compressor.cc  sf_compressor.h
tests/: CMakeLists.txt  cereal_blaze_test.cc  denoise_algorithms_test.cc  padding_test.cc  wavelet_buffer_test.cc  wavelet_buffer_view_test.cc  wavelet_image_test.cc  wavelet_parameters_test.cc  wavelet_test.cc
tests/img/: color_space_test.cc  jpeg_codec_test.cc  wavelet_image_test.cc
tests/internal/: matrix_compressor_test.cc
wavelet_buffer/: cereal_blaze.h  denoise_algorithms.h  metric.h  padding.h  primitives.h  wavelet.h  wavelet_buffer.cc  wavelet_buffer.h  wavelet_buffer_serializer.h  wavelet_buffer_view.h  wavelet_image.h  wavelet_parameters.h  wavelet_utils.h
wavelet_buffer/codecs/: color_space.h  image_codec.h  jpeg_codecs.h
wavelet_buffer/img/: color_space.h  image_codec.h  jpeg_codecs.h  wavelet_image.h
