[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "pybind11>=2.9.2",
    "cmake",
    "conan",
    "ninja; platform_system!='Windows'"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["*38*", "*39*", "*310*"]
skip = ["*musllinux*", "pp*"]
test-extras = "test"
test-command = "pytest {project}/python/tests"

[tool.cibuildwheel.linux]
archs = "x86_64"
environment-pass = ["VERSION_SUFFIX"]
