[build-system]
requires = [
    "setuptools >= 42",
    "scikit-build",
    "pybind11 >= 2.9.2",
    "cmake",
    "conan == 1.52.0",
    "ninja"
]

build-backend = "setuptools.build_meta"

[project]
[project.optional-dependencies]
docs = [
    "mkdocs~=1.3",
    "    git+https://github.com/JakubAndrysek/mkdoxy",
    "mkdocs-material~=8.4",
    "plantuml-markdown~=3.5",
    "mkdocs-same-dir~=0.1",
    "mkdocs-jupyter~=0.21",
    " mkdocstrings[python]~=0.19"
]

[tool.cibuildwheel]
archs = ["auto64"]
build = ["*38*", "*39*", "*310*"]
skip = ["*musllinux*", "pp*"]
test-command = "pip install -r {project}/python/requirements/test.txt && pytest {project}/python/tests"
build-verbosity = '3'

[tool.cibuildwheel.linux]
archs = "x86_64"
environment-pass = ["VERSION_SUFFIX"]
