[build-system]
requires = [
    "setuptools >= 42",
    "scikit-build",
    "pybind11 >= 2.9.2",
    "cmake",
    "conan == 1.53.0",
    "ninja"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = ["auto64"]
build = ["*38*", "*39*", "*310*"]
skip = ["*musllinux*", "pp*"]
test-command = "pip install -r {project}/python/requirements/test.txt && pytest {project}/python/tests"
build-verbosity = '3'

[tool.cibuildwheel.linux]
archs = "x86_64"
environment-pass = ["VERSION_SUFFIX"]
