[build-system]
requires = [
    "setuptools>=42",
    "scikit-build",
    "pybind11>=2.9.2",
    "cmake",
	"conan",
    "ninja; platform_system!='Windows'"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
before-all = [
    "yum update",
    "yum install libopenblas-dev",
		"yum install libjpeg-dev",
		"yum install nlohmann-json3-dev",
		"git clone https://bitbucket.org/blaze-lib/blaze.git --depth=1 --branch=v3.8 && cd blaze && cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ . && sudo make install",
		"git clone https://github.com/USCiLab/cereal --depth=1 --branch=v1.3.2 && cd cereal && cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ -DJUST_INSTALL_CEREAL=ON . && sudo make install"
]
test-extras = "test"
test-command = "pytest {project}/python/tests"
